# blu-sort

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
rules/: default.yaml
sorter-core/: Cargo.toml
sorter-core/src/: lib.rs
src/: App.tsx  index.css  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
