
[package]
name = "sorter-core"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
thiserror = "1"
walkdir = "2"
rayon = "1"
blake3 = "1"
kamadak-exif = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
mime_guess = "2"
fs_extra = "1"
pathdiff = "0.2"
directories = "5"